f5-nginx-waf-live-demo/k8s/origin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: origin
  labels:
    app: origin
    app.kubernetes.io/part-of: f5-nginx-waf-demo
spec:
  selector:
    app: origin
  ports:
    - name: http
      port: 8080
      targetPort: http
