f5-nginx-waf-live-demo/k8s/waf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waf
  labels:
    app: waf
    app.kubernetes.io/part-of: f5-nginx-waf-demo
spec:
  selector:
    app: waf
  ports:
    - name: http
      port: 8080
      targetPort: http
